--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,27 @@
   }
 }
 
+/* TESTIMONIAL SLIDE ACTIVE STYLES */
+#testimonial .swiper-slide.swiper-slide-active {
+  background-color: #fff;
+  border-radius: 10px;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+
+#testimonial .swiper-slide.swiper-slide-active::after {
+  content: ' ';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  background-color: #245d51;
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+/* CUSTOM ANIMATION */
 .animation-pulse {
   animation: pulse 1s infinite;
 }
